--- a/S&DS Final Project .Rmd
+++ b/S&DS Final Project .Rmd
@@ -198,6 +198,55 @@ mean(abs(diffvals) >= abs(diffMedian))
 ```
 *In the last visual representation for log domestic gross by production year, we performed a permutation test to obtain a p-value for a hypothesis test. The null hypothesis is that there is no significant difference between median domestic gross for movies released before/during 2015 and after 2015. The alternative hypothesis is that there is a statistically significant difference between median domestic gross for movies released before/during 2015 and after 2015. From the p-value, we can conclude that the null hypothesis cannot be rejected because the p-value of 0.49 is greater than 0.05. This is shown in the histogram as the red line denoting the actual difference in medians lies within the permuted sample median values.*
 
+```{r}
+names(movie1)
+movie2 <- movie1[, c(13, 12, 15:22, 2, 4, 9, 10, 11)]
+names(movie2)
+dim(movie2)
+```
+*Here, we wanted to fit a model that looks at possible predictors of domestic earnings (domestic gross the on log scale). In order to do this, we made a new dataset above called 'movie2' that contains most of the relevant columns.*
+
+```{r}
+library(leaps)
+mod <- regsubsets(log(movie2$domesticGross) ~ ., data = movie2, nvmax = length(movie2) - 1)
+modsum <- summary(mod)
+modsum$which
+```
+*Above, we performed best subsets regression using the 'regsubsets' function in the 'leaps' package and displayed 'modsum$which' in order to get a decent sense on what variables in 'movie2' are being included in each step of the best subsets regression.*
+
+```{r}
+modnum <- which.max(modsum$rsq)
+names(movie2)[modsum$which[modnum, ]][-1]
+movietemp <- movie2[, modsum$which[modnum, ]]
+summary(lm(log(domesticGross) ~ ., data = movietemp))
+```
+```{r}
+modnumadj <- which.max(modsum$adjr2)
+names(movie2)[modsum$which[modnumadj, ]][-1]
+movietempadj <- movie2[ ,modsum$which[modnumadj, ]]
+summary(lm(log(domesticGross) ~ ., data = movietempadj))
+```
+```{r}
+modnumBic <- which.min(modsum$bic)
+names(movie2)[modsum$which[modnumBic, ]][-1]
+movietempBic <- movie2[ ,modsum$which[modnumBic, ]]
+summary(lm(log(domesticGross) ~ ., data = movietempBic))
+```
+```{r}
+modnumCP <- min(c(1:length(modsum$cp))[modsum$cp <= c(1:length(modsum$cp)) + 1])
+names(movie2)[modsum$which[modnumCP, ]][-1]
+movietempCP <- movie2[ ,modsum$which[modnumCP, ]]
+summary(lm(log(domesticGross) ~ ., data = movietempCP))
+```
+```{r}
+modfin <- lm(log(domesticGross) ~ ., data = movietempBic)
+summary(modfin)
+```
+```{r}
+library(olsrr)
+source("http://www.reuningscherer.net/s&ds230/Rfuncs/regJDRS.txt")
+myResPlots(modfin, "Model For Domestic Earnings")
+```
 ## Analysis
 
 ## Conclusion & Summary
