Update S&DS Final Project .Rmd

--- a/S&DS Final Project .Rmd
+++ b/S&DS Final Project .Rmd
@@ -137,7 +137,7 @@ qqPlot(log(domesticGross), pch = 19, main = "Normal Quantile Plot of Domestic Gr
 
 ```
 
-*To get a sense of the dataset and an overall view on how it behaves, we started off by plotting different variables. From these graphs, it is evident that the production budget and the domestic gross are heavily right skewed while the approval index score is approximately normally distributed. There is a somewhat high positive correlation between domestic gross and production budget, but the data does not seem to take on any concrete shape.*
+*To get a sense of the dataset and an overall view on how it behaves, we started off by plotting different variables. We created seven graphs: a histogram of movie produciton budget, a histogram of movie approval index score, a boxplot of movie domestic gross, a scatterplot of movie approval index score vs. production budget, a scatterplot of movie domestic gross vs. production budget on the log scale, a normal quantile plot of approval index, and a normal quantile plot of domestic gross. From these graphs, it is evident that the production budget and the domestic gross are heavily right skewed while the approval index score is approximately normally distributed. There is a somewhat high positive correlation between domestic gross and production budget on the log scale, but the data does not seem to take on any concrete shape. Meanwhile, movie approval index score vs. production budget appear to have a weak positive correlation; the data does not appear to take on any concrete shape here. With the normal quantile plot, we can easily determine that approval index has an approximately normal distribution with few outliers outside of the 95% confidence band. On the other hand, analyzing the normal quantile plot for domestic gross, we can determine that domestic gross data has a significant left skewed nature.*
 
 
 ```{r}
